chapter6_operation_management/shadow_ab_pattern/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shadow-ab
  labels:
    istio-injection: enabled
