chapter6_operation_management/shadow_ab_pattern/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris-svc
  namespace: shadow-ab
  labels:
    app: iris-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iris
  template:
    metadata:
      labels:
        app: iris
        version: svc
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/proxyCPU: "128m"
        sidecar.istio.io/proxyMemory: "128Mi"
        proxy.istio.io/config: "{'concurrency':'16'}"
    spec:
      containers:
        - name: iris-svc
          image: shibui/ml-system-in-actions:shadow_ab_pattern_api_0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 300m
              memory: "300Mi"
            requests:
              cpu: 300m
              memory: "300Mi"
          volumeMounts:
            - name: workdir
              mountPath: /workdir
      volumes:
        - name: workdir
          emptyDir: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris-rf
  namespace: shadow-ab
  labels:
    app: iris-rf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iris
  template:
    metadata:
      labels:
        app: iris
        version: rf
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/proxyCPU: "128m"
        sidecar.istio.io/proxyMemory: "128Mi"
        proxy.istio.io/config: "{'concurrency':'16'}"
    spec:
      containers:
        - name: iris-rf
          image: shibui/ml-system-in-actions:shadow_ab_pattern_api_0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 300m
              memory: "300Mi"
            requests:
              cpu: 300m
              memory: "300Mi"
          volumeMounts:
            - name: workdir
              mountPath: /workdir
      volumes:
        - name: workdir
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: iris
  namespace: shadow-ab
  labels:
    app: iris
spec:
  ports:
    - name: rest
      port: 8000
      protocol: TCP
  selector:
    app: iris

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: iris
  namespace: shadow-ab
spec:
  host: iris
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: svc
      labels:
        version: svc
    - name: rf
      labels:
        version: rf

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iris
  namespace: shadow-ab
spec:
  hosts:
    - iris
  http:
    - route:
        - destination:
            host: iris
            subset: svc
          weight: 100
      mirror:
        host: iris
        subset: rf
      mirror_percent: 100
